--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/dist/css/main.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 	<title>App</title>
 </head>
 <body>
 	<div id="app"></div>
-	<script src="/dist/js/app.bundle.js"></script>
+	<script src="dist/js/app.bundle.js"></script>
 </body>
 </html>
